# RealBigBangSim

./: .gitignore  CLAUDE.md  diagnose.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: amd-black-screen-particles.md  imgui-font-atlas-not-built.md  knowledge-base.md  particles-and-hud-visibility.md
.planning/debug/resolved/: particle-visibility-compat-profile.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bigbangsim/: __main__.py  app.py  config.py
bigbangsim/capture/: __init__.py  recorder.py  screenshot.py
bigbangsim/presentation/: __init__.py  camera_controller.py  educational_content.py  hud.py  milestones.py
bigbangsim/rendering/: camera.py  coordinates.py  era_transition.py  particles.py  postprocessing.py  shader_loader.py
bigbangsim/shaders/: test_scene.frag  test_scene.vert  timeline_bar.frag  timeline_bar.vert
bigbangsim/simulation/: constants.py  cosmology.py  engine.py  era_visual_config.py  eras.py  state.py  timeline.py
tests/: conftest.py  test_camera.py  test_camera_controller.py  test_constants.py  test_controls.py  test_coordinates.py  test_cosmology.py  test_era_sequence.py  test_era_shaders.py  test_era_transitions.py  test_era_visual_config.py  test_fullscreen.py  test_hud.py  test_milestones.py  test_nucleosynthesis.py  test_particles.py  test_postprocessing.py  test_recombination.py  test_screenshot.py  test_shader_loader.py  test_simulation.py  test_state.py  test_structure.py  test_timeline.py  test_video_recorder.py
(+76 files in other folders)
